<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="img_login">Logo do Aplicativo</string>
    <string name="email">SeuEmail@gmail.com</string>
    <string name="senha">senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="criar_conta">Criar conta</string>
    <string name="nome">Seu nome</string>
    <string name="conf_senha">Confirmar senha</string>
    <string name="criar">Criar</string>
    <string name="addItem">Adicionar Lista</string>
    <string name="imgLista">Imagem da Lista</string>
    <string name="addItemList">Adicionar Item na Lista</string>
    <string name="nomeItem">Nome do Item</string>
    <string name="qtdItem">0</string>
    <string name="medidas">Unidade de medida</string>
</resources>